--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "homepage": "https://github.com/leepeters0023/Park-Burlington-2.0#readme",
   "dependencies": {
     "dotenv": "^8.2.0"
+  },
+  "devDependencies": {
+    "html-webpack-plugin": "^4.2.0"
   }
 }
