Add ISC license

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "LICENSE.txt",
   "bugs": {
     "url": "https://github.com/leepeters0023/Park-Burlington-2.0/issues"
   },
